switches background colors of hover and active secondary states to meet 4:5:1 color contrast ratio. adds correct padding and font family to all buttons

--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -32,8 +32,8 @@ $hero-image: url('/assets/images/hero.jpeg');
 
   --btn-secondary-text: #{$black};
   --btn-secondary-bg: #{$theme-mars-base};
-  --btn-secondary-bg-hover: #{$theme-mars-dark};
-  --btn-secondary-bg-active: #{$theme-mars-darker};
+  --btn-secondary-bg-hover: #{$theme-mars-darker};
+  --btn-secondary-bg-active: #{$theme-mars-darkest};
 
   --btn-outline-text: #{$theme-ultraviolet-base};
   --btn-outline-hover: #{$theme-ultraviolet-dark};
